# y-combinator-hackathon

./: LICENSE  README.md  demo_trace.jsonl  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
examples/: demo_agent.py  fake_llm.py  fake_tools.py  langgraph_demo.py  loop_engineering_demo.py  run_demo.py
flight_recorder/: __init__.py  capture.py  cli.py  crypto.py  dag.py  errors.py  events.py  hashing.py  loops.py  recorder.py  replayer.py  report.py  signing.py  storage.py  viewer.py
flight_recorder/integrations/: __init__.py  _serialization.py  _streaming.py  anthropic.py  langchain.py  litellm.py  openai.py  requests.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CommandPalette.tsx  CompareRunsView.tsx  DashboardView.tsx  LandingView.tsx  Navbar.tsx  NodeInspector.tsx  ReplayViewer.tsx  SettingsView.tsx  Sidebar.tsx  TraceExplorerView.tsx
src/data/: traces.ts
src/hooks/: useMousePosition.ts  useScrollProgress.ts  (+1 more)
tests/: conftest.py  test_capture_integrations.py  test_cli.py  test_dag.py  test_encryption.py  test_events.py  test_hashing.py  test_hashing_determinism.py  test_integration.py  test_litellm_integration.py  test_loop_engineering.py  test_pretty_errors.py  test_recorder.py  test_replay_modes.py  test_replayer.py  test_requests_integration.py  test_scheduler.py  test_signing.py  test_storage.py  test_streaming.py  test_topological_replayer.py
traces/: coding-assistant.jsonl  customer-support.jsonl  research-agent-diverged.jsonl  research-agent.jsonl  sales-agent.jsonl  travel-planner.jsonl
(+23 files in other folders)
