[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-recorder"
version = "0.1.1"
description = "DAG-based flight recorder and local replay system for AI agents (MVP)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
agent-rr = "flight_recorder.cli:main"

[tool.setuptools.packages.find]
include = ["flight_recorder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
